# shasta2

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: Build.yml
Executable/: CMakeLists.txt
PythonModule/: CMakeLists.txt
StaticLibrary/: CMakeLists.txt
conf/: ONT-diploid-40x-60kb-Q25-2026.01.09.conf  ONT-diploid-40x-60kb-Q25-2026.01.14.conf  ONT-diploid-40x-60kb-Q25-2026.03.10.conf  ONT-diploid-40x-60kb-Q25-2026.04.15.conf  ONT-diploid-40x-60kb-Q25-2026.06.26.conf
dynamicExecutable/: CMakeLists.txt
scripts/: AnalyzeStrandReversal.py  AnchorGraphTransitiveReduction.py  AnchorSimilarityGraphAllShortestPaths.py  AnchorSimilarityGraphComputeOptimalPath.py  AnchorSimilarityGraphCreateShortestPathTree.py  AnchorSimilarityGraphFlagShortestPathEdges.py  AnchorSimilarityGraphShortestPaths.py  Assemble.py  AssemblyGraphPostprocessor.py  BubbleCleanup.py  BuildAbpoa.py  BuildPoasta.py  BuildTheseus.py  ComputeMarkerErrorRates.py  ComputeReadLengthDistribution.py  CreateAnchorGraph.py  CreateAnchorGraphFromAnchorSimilarityGraph.py  CreateAnchorSimilarityGraph.py  CreateAnchors.py  CreateAssemblyGraph.py  CreateAssemblyGraph1.py  CreateAssemblyGraph2.py  CreateAssemblyGraph3.py  CreateCompleteAnchorGraph.py  CreateJourneys.py  CreateMarkerKmers.py  CreateMarkers.py  CreateSimpleAnchorGraph.py  FindPalindromicReads.py  InstallBuildPrerequisites.py  Phase.py  ReadExternalAnchors.py  ReadFollowing.py  TestSearch.py
src/: Anchor.cpp  Anchor.hpp  AnchorFromMarkerKmers.cpp  AnchorGraph.cpp  AnchorGraph.hpp  AnchorPair.cpp  AnchorPair.hpp  AnchorSimilarityGraph.cpp  AnchorSimilarityGraph.hpp  Assembler.cpp  Assembler.hpp  AssemblerHttpServer-Anchors.cpp  AssemblerHttpServer-Assembly.cpp  AssemblerHttpServer-Markers.cpp  AssemblerHttpServer-Reads.cpp  AssemblerHttpServer.cpp  AssemblerMarkers.cpp  AssemblerMode3.cpp  AssemblerOptions.cpp  AssemblerOptions.hpp  AssemblerReads.cpp  AssemblyGraph-BubbleCleanup.cpp  AssemblyGraph-FromPaths.cpp  AssemblyGraph-Phasing.cpp  AssemblyGraph.cpp  AssemblyGraph.hpp  AssemblyGraph1.cpp  AssemblyGraph1.hpp  AssemblyGraph2.cpp  AssemblyGraph2.hpp  AssemblyGraph2Postprocessor.cpp  AssemblyGraph2Postprocessor.hpp  AssemblyGraph3.cpp  AssemblyGraph3.hpp  AssemblyGraph3Postprocessor.cpp  AssemblyGraph3Postprocessor.hpp  AssemblyGraphBaseClass.hpp  AssemblyGraphPostprocessor.cpp  AssemblyGraphPostprocessor.hpp  Base.cpp  (+304 more)
srcMain/: main.cpp
staticExecutable/: CMakeLists.txt
staticLibrary/: CMakeLists.txt
unused/: AssemblyGraph-unused.cpp  LocalAssembly.cpp  LocalAssembly3.hpp  LocalAssembly4.cpp  LocalAssembly5.cpp  LocalAssembly5.hpp  LocalAssemblyGraph.cpp  LocalAssemblyGraph.hpp  ONT-diploid-40x-60kb-Q25-2025.11.12.conf  SearchGraph.cpp  SearchGraph.hpp  StrandSeparator.cpp  SubsetGraph.hpp  Tangle.cpp  Tangle.hpp  TangleMatrix.cpp  TestSearch.py  poastaWrapper.cpp  seqan.hpp  shastaLapack.hpp
